# aula_4_bootcamp

./: 10_list.py  1_list.py  2_list.py  3_list.py  4_list.py  5_list.py  6_list.py  7_list.py  8_list.py  9_list.py  Exercícios_Funções.py  Exercícios_list_Dicst.py  README.md  pyproject.toml
